--- a/team_data_prep.ipynb
+++ b/team_data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "4e264844-49b3-44b4-8ae4-1ff58baddc07",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
        "[271116 rows x 15 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "d8d489d8-9c75-467d-90e3-261108301975",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
        "26  Athletics Women's 100 metres   NaN  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,19 +478,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
+   "id": "69a2c925-b056-45fc-bab7-3bb08fa364a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "\n",
+    "# Suppress specific warning\n",
+    "warnings.simplefilter(\"ignore\", category=DeprecationWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "81edc748-70cb-4b13-9dff-720044fac60f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Jagroop\\AppData\\Local\\Temp\\ipykernel_11500\\989464851.py:14: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  team = athletes.groupby([\"NOC\", \"Year\"]).apply(team_summary)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Function `team_summary` summarizes data for each group of athletes based on \"NOC\" (National Olympic Committee) and \"Year\".\n",
     "def team_summary(data):\n",
@@ -510,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "id": "7d5384b8-00e7-46e1-98ab-2f4f72d1248c",
    "metadata": {},
    "outputs": [],
@@ -522,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "id": "6c18b910-b768-49d7-80b5-3138fc535174",
    "metadata": {},
    "outputs": [
@@ -726,7 +730,7 @@
        "[2613 rows x 9 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,19 +741,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "id": "e92f9e27-a94f-418a-bbae-495af27e7878",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Jagroop\\AppData\\Local\\Temp\\ipykernel_11500\\1456078414.py:7: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  team = team.groupby([\"team\"]).apply(prev_medals) #Applys new sort and col\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Function creates a new column for team dataframe that represents the medals from a previous Olympic Games\n",
     "def prev_medals(data):\n",
@@ -765,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "id": "5b72397c-ce12-4deb-93fb-9408272383d7",
    "metadata": {},
    "outputs": [
@@ -981,7 +976,7 @@
        "[2144 rows x 10 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "id": "e7cb6a20-008c-4f86-815c-83f7f9423d2c",
    "metadata": {},
    "outputs": [],
